sass/global.sass
@charset "UTF-8"
@import compass/css3

// global

html, body
  font-size: 16px
  background-color: #efefef
  font-family: 'Rosario', "Noto Sans", sans-serif
  line-height: 1em

  font-smoothing: subpixel-antialiased !important
  -webkit-font-smoothing: subpixel-antialiased !important
  -moz-osx-font-smoothing: auto !important
  -webkit-overflow-scrolling: touch

p
  line-height: 1.5em
  margin: 0 0 1em 0
  &:last-child
    margin-bottom: 0

.inline-block
  display: inline-block

.clear
  clear: both

.float-right
  float: right

.align-right
  text-align: right

.collapse-top
  margin-top: -1rem

.no-bottom
  margin-bottom: 0

// for bootstrap

.badge
  margin: -3px 0
.badge-light
  background-color: rgba(#000, 0.05)
  color: #999

.glyphicon-light
  opacity: 0.3


.container
  padding-left: 1rem
  padding-right: 1rem
  width: 100%
  max-width: 1200px

// for general layout

#about
  display: none

// for points

#summary
  margin: 1rem 0
  padding: 1rem
  background-color: hsla(180, 50, 80, 0.5)
  +box-shadow(rgba(#000, 0.2) 0.1rem 0.1rem 0.2rem)

blockquote
  border-color: rgba(#000, 0.1)
  padding: 0 1rem
  margin-bottom: 1rem
  p
    margin: 0
    &:first-child
      margin-bottom: 0.2em
  .badge
    //line-height: 2em
    //cursor: pointer
    font-weight: normal
    margin: 0 0.25em
    &:last-child
      margin-right: 0

  .badge-light
    color: rgba(#000,0.5)
    //background-color: rgba(#000,0.05)
    &:hover
      color: rgba(#000,0.4)
    &.active
      color: #fff
      background-color: rgba(#000,0.4)

// for navbars

.navbar
  margin-bottom: 1rem
  min-height: 1em
  .navbar-nav
    margin-top: 0
    margin-bottom: 0
  .navbar-brand[data-click]
    cursor: pointer
  .navbar-brand, li a, .navbar-toggle
    line-height: 1em
    height: auto
  .navbar-toggle
    margin-top: 0
    margin-bottom: 0
    border: none
    border-radius: 0
  .logo
    height: 2em
    margin-top: -0.5em
    margin-bottom: -0.5em
  .btn
    background-color: rgba(#000,0)
  .btn-active
    border-bottom: 0.2em hsla(180,50,50,1) solid
    color: hsla(180,50,50,1)
    font-weight: bold
    border-radius: 0
  &.large
    .navbar-brand, li a, .navbar-toggle
      font-size: 1.2rem
      padding-top: 0.9em
      padding-bottom: 0.9em
  &.medium
    .navbar-brand, li a, .navbar-toggle
      font-size: 1rem
      padding-top: 0.8em
      padding-bottom: 0.8em
  &.small
    .navbar-brand, li a, .navbar-toggle
      font-size: 0.9rem
      padding-top: 0.6em
      padding-bottom: 0.6em
  .input-group-btn li a
    font-size: 0.9rem
    cursor: pointer


// for top navbar

.form-control
  height: auto
  padding: 0.5rem
  font-size: 1em
  line-height: 1em
  margin: 0 0 0 0.5rem
  width: 100%

.form-group, .input-group-btn
  width: auto
  display: inline-block

input[type=file]
  display: inline-block
  margin: 0 0 0 0.5rem
  padding: 0.5rem
  font-size: 1em
  line-height: 1em

.dropdown-menu
  li.divider
    margin: 0.3em 0


// for content navbar

.border-bottom
  border-bottom: 3px rgba(#000,0.1) solid

[data-topic], [data-relation], [data-profession], [data-author]
  cursor: pointer
  &:hover
    text-decoration: none

.nav-pills-nested
  list-style: none
  margin-left: 1em
  padding-left: 0
  border-left: 1px rgba(#000, 0.3) dotted
  li.active>a
    color: #fff
    background-color: #337ab7
    &>.badge
      color: #337ab7
      background-color: #fff
  a
    padding: 10px 15px
    display: block
    border-radius: 4px
    text-decoration: none

#topics.nav-pills
  &>[data-expandable='true'], &>[data-expandable='all']
    &>a
      background-color: rgba(#fff,0.5)
      border: 1px rgba(#000,0.1) solid
      .glyphicon
        position: absolute
        right: 0
        top: 0
        padding: 10px
    &.active>a
      background-color: #337ab7

#navbar-collapse-level1
  overflow: visible

@media (min-width: 768px)
  #topics-container
    overflow-y: scroll
    &.affix-top
      max-height: calc(100vh - 89px)
    &.affix
      position: fixed
      top: 17px
      //width: calc(25vw - 10.75px)
      max-width: calc(300px - 0.5px)
      max-height: calc(100vh - 34px)
  #relations-container
    float: right

@media (max-width: 768px)
  #topics-container
    &.affix
      position: relative
  #relations
    margin-top: 17px

